# confetti_chaos

./: .gitignore  AGENTS.md  GAME_VISION.md  LICENSE  README.md  TASKS.md  TASKS_DONE.md  TASKS_TODO.md  TECH_SPEC.md  WEAPON_EVOLUTION.md  WEAPON_OVERLAY_PIPELINE.md  build.ps1  confetti-chaos.spec  pyproject.toml  requirements.txt
docs/: PACKAGING.md  PARTY_ANIMAL_EXTENSION.md  TEDDY_INTEGRATION_PATH.md
src/: main.py  playerdemo.py
src/confetti_chaos/: __init__.py  __main__.py  game.py  save_data.py  settings.py
src/enemies/: __init__.py  balloon_enemy.py  boss_balloon.py  confetti_spray.py  confetti_sprayer.py  hazard.py  pinata_enemy.py  streamer_snake.py  (+1 more)
tests/: test_aim_assist.py  test_audio.py  test_background.py  test_bottle_rocket.py  test_character_passives.py  test_character_unlocks.py  test_collision.py  test_dodge.py  test_gameplay_audio_cues.py  test_high_score.py  test_leaderboard.py  test_level_transition.py  test_meta_progression.py  test_party_animal_integration.py  test_party_animals.py  test_pause_menu.py  test_player_animation_system.py  test_player_health.py  test_player_visual.py  test_player_visual_anchors.py  test_playerdemo.py  test_playerdemo_sheet.py  test_run_progression.py  test_run_upgrades.py  test_settings.py  test_spawn_controller.py  test_start_menu.py  test_state_transitions.py  test_supers.py  test_ui.py  test_weapon_evolutions.py  test_weapon_visual_assets.py  test_weapon_visual_overlay_rendering.py  test_weapon_visual_overlays.py  test_weapon_visuals.py  test_weapons.py  test_xp_drops.py
tools/: generate_frame_rect_cache.py
(+52 files in other folders)
